#:schema https://www.schemastore.org/cargo.json

[package]
name = "tuirunner"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "tuir"
path = "src/main.rs"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
garde = { version = "0.23.0", features = ["full"] }
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8.19"
serde_json = "1.0.128"
serde_yaml = "0.9.34"
schemars = { version = "0.8.21", features = ["preserve_order"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
